Atualização do Projeto

--- a/src/translations/pt-BR.json
+++ b/src/translations/pt-BR.json
@@ -1,5 +1,5 @@
 {
-  "APP_NAME": "Cadastro de HQS",
+  "APP_NAME": "GERENCIAMENTO DE HQS",
   "Detail": "Adicionar",
   "Hello world !": "Hello world !",
   "Master": "Principal",
