alteração de layout

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,7 +1,7 @@
 {
-  "APP_NAME": "Scrum and Coke",
-  "Detail": "Detail",
+  "APP_NAME": "GERENCIAMENTO DE HQS",
+  "Detail": "Adicionar",
   "Hello world !": "Hello world !",
-  "Master": "Master",
+  "Master": "Principal",
   "Version": "Version"
 }
